force-app/main/default/objects/Current_Directorship__c/Current_Directorship__c.object-meta.xml
<CustomObject>
    <label>Current Directorship</label>
    <nameField>
        <displayFormat>DIR-{0000}</displayFormat>
        <label>Directorship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Directorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>