force-app/main/default/objects/Current_Directorship__c/fields/Additional_data_field__c.field-meta.xml
<CustomField>
    <fullName>Additional_data_field__c</fullName>
    <label>Additional data field</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>