force-app/main/default/objects/Current_Directorship__c/fields/Date_disqualified_until__c.field-meta.xml
<CustomField>
    <fullName>Date_disqualified_until__c</fullName>
    <label>Date disqualified until</label>
    <type>Date</type>
</CustomField>