force-app/main/default/objects/Current_Directorship__c/fields/Directorship_Type__c.field-meta.xml
<CustomField>
    <fullName>Directorship_Type__c</fullName>
    <label>Directorship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>