force-app/main/default/objects/Current_Directorship__c/fields/Id_reference__c.field-meta.xml
<CustomField>
    <fullName>Id_reference__c</fullName>
    <label>Id reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>