force-app/main/default/objects/Current_Directorship__c/fields/Org_Id_verified__c.field-meta.xml
<CustomField>
    <fullName>Org_Id_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Org Id verified</label>
    <type>Checkbox</type>
</CustomField>