force-app/main/default/objects/Current_Directorship__c/fields/Org_Id_verified_ABN__c.field-meta.xml
<CustomField>
    <fullName>Org_Id_verified_ABN__c</fullName>
    <label>Org Id verified ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>