force-app/main/default/objects/Current_Directorship__c/fields/Org_Id_verified_Asic_name__c.field-meta.xml
<CustomField>
    <fullName>Org_Id_verified_Asic_name__c</fullName>
    <label>Org Id verified Asic name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>