force-app/main/default/objects/Current_Directorship__c/fields/Org_Id_verified_Asic_status__c.field-meta.xml
<CustomField>
    <fullName>Org_Id_verified_Asic_status__c</fullName>
    <label>Org Id verified Asic status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>