force-app/main/default/objects/Current_Directorship__c/fields/Record_Extract_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Extract_Date__c</fullName>
    <label>Record Extract Date</label>
    <type>Date</type>
</CustomField>